fixed navbar on smaller screens and prof image overlapping with text

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ nav {
 }
 
 nav a button {
-  margin: 0px 30px 0px 30px;
+  margin: 0px 20px 0px 20px;
   color: black;
   font-weight: 700;
   font-size: 16px;
@@ -77,12 +77,13 @@ nav a button:hover {
 
 .intro-profile-pic {
   margin-left: 50px;
-  padding-top: 50px;
+  padding-top: 40px;
 }
 
 .intro-profile-pic img {
-  height: 200px;
-  width: 200px;
+  /* height: 60%; */
+  width: 100%;
+  max-width: 200px;
 }
 
 .intro-text-area {
@@ -90,7 +91,7 @@ nav a button:hover {
 }
 
 .intro-text-area h2 {
-  font-size: 34px;
+  font-size: 30px;
   width: 450px;
   margin-bottom: 12px;
 }
